src/test/ui/traits/assoc_type_bound_with_struct.rs
trait Bar {
    type Baz;
}

struct Foo<T> where T: Bar, <T as Bar>::Baz: String { //~ ERROR expected trait, found struct
    t: T,
}

fn main() {}
